objects/tffa__QuestionnaireOutcome__c.object
<CustomObject>
    <description>Represents an outcome that can be resolved using information captured by a questionnaire. Every outcome has a condition that determines when the outcome is valid (or applicable) given the information (answers) captured. Depending on the use case, outcomes can be of various types e.g. PRODUCT, CDD_DECISION, etc.</description>
    <fields>
        <fullName>tffa__Condition__c</fullName>
        <description>An expression that determines whether the outcome is valid given the information (answers) captured by the questionnaire. It is composed of question identifiers (code) and operators. The question identifiers act as placeholders for answers which gets resolved during evaluation.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>To access question fields, use &apos;q.{{QuestionTemplate.Code}}&apos; e.g. q.Transfer_Services === true.</inlineHelpText>
        <label>Condition</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__Description__c</fullName>
        <description>Explains the rule, giving some context about why the rule conditions (facts) lead to the rule action (outcome).</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__DueDiligenceStatus__c</fullName>
        <description>The outcome (as expressed in status) of a due diligence activity.</description>
        <label>Due-Diligence Status (outcome)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__DueDiligenceStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Product outcome if outcome condition is satisfied.</description>
        <label>Product (outcome)</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Product is not valid.</errorMessage>
            <filterItems>
                <field>tffa__Product__c.tffa__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>tffa__Product__c</referenceTo>
        <relationshipLabel>Questionnaire Outcomes</relationshipLabel>
        <relationshipName>QuestionnaireOutcomes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__Questionnaire__c</fullName>
        <description>Reference to parent Questionnaire</description>
        <label>Questionnaire</label>
        <referenceTo>tffa__Questionnaire__c</referenceTo>
        <relationshipLabel>Outcomes</relationshipLabel>
        <relationshipName>Outcomes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <description>The relative order of the outcome.</description>
        <label>Sort order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Type__c</fullName>
        <description>Type of outcome. e.g. PRODUCT.</description>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__QuestionnaireOutcomeType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Value__c</fullName>
        <description>The value of the outcome. Depending on the type, it can be product code, cdd decision, etc.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Questionnaire Outcome</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Questionnaire Outcomes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>tffa__ProductIsRequired</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT(tffa__Type__c) = &quot;PRODUCT&quot; &amp;&amp; ISBLANK(tffa__Product__c)</errorConditionFormula>
        <errorDisplayField>tffa__Product__c</errorDisplayField>
        <errorMessage>Product is required</errorMessage>
    </validationRules>
</CustomObject>